@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T16:32:50Z",
-  "count_outdated" : 167,
-  "uniques_outdated" : 70,
-  "count" : 184,
-  "uniques" : 82,
+  "timestamp" : "2022-06-04T01:52:47Z",
+  "count_outdated" : 177,
+  "uniques_outdated" : 78,
+  "count" : 191,
+  "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 10 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 8 ]
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
