@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 6,
+  "count": 14,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
